[package]
name = "loggathing"
version = "0.0.1"
authors = ["Ramon Huidobro <hola@ramonhuidobro.com>"]
edition = "2018"

[dependencies]
mount = "0.4.0"
warp = "0.1"
juniper = "0.11.1"
bson = "0.13.0"
mongodb = "0.3.12"
logger = "0.4.0"
serde = "1.0.87"
serde_derive = "1"
serde_json = "1"
failure = "0.1"
failure_derive = "0.1"
